# dswifi

./: .gitignore  CMakeLists.txt  Catnip.cmake  Makefile
arm7/: Makefile
arm9/: Makefile
arm9/source/: wifi_arm9.c  wifi_arm9.h
common/source/: spinlock.s  wifi_shared.h
include/: dswifi9.h  netdb.h  wfc.h
include/arpa/: inet.h
include/netinet/: in.h
include/sys/: ioctl.h  socket.h
source/: dswifi9.c  wfc.c  wpa.twl.c
source/sgIP/: sgIP.c  sgIP.h  sgIP_ARP.h  sgIP_Config.h  sgIP_DHCP.c  sgIP_DHCP.h  sgIP_DNS.c  sgIP_DNS.h  sgIP_Hub.c  sgIP_Hub.h  sgIP_ICMP.h  sgIP_IP.c  sgIP_IP.h  sgIP_TCP.c  sgIP_TCP.h  sgIP_UDP.c  sgIP_UDP.h  sgIP_memblock.c  sgIP_memblock.h  sgIP_sockets.c  sgIP_sockets.h
